cl-popup: fixed trigger image alignment

--- a/less/cl-popup.less
+++ b/less/cl-popup.less
@@ -12,6 +12,10 @@
 		text-align: right;
 	}
 
+	&-trigger img {
+		vertical-align: top;
+	}
+	
 	&-overlay {
 		display: none;
 		position: fixed;
